# matrixoverlay.v2

./: 01Senior_Architect_Role_Starter.md  02Senior_Project_Manager_Role_Starter.md  03Senior_Systems_Engineer_Role_Starter.md  Cargo.toml  CurrentProgramTrajectory.md  Iterative_Prompt.md  README.md  build_journal.md  compile_log.txt  config.example.toml  debug_cycle.sh  debugger.py  debugging_Iterative_Prompt.md  diffcorrector  feature_checklist.md  gemini_clock.md  install_prereqs.sh  matrixoverlay.v2.codebase.md  matrixoverlay.v2.development_pipeline.md  overlay  powershell.md  repair_and_install.sh  reproduce_tray.rs  search_copy.py  simulate_tray.sh  test_autocommit.sh  test_report.md  verify_features.sh
.github/workflows/: deploy.yml  rust.yml
backups/: config.1772191376.json
backups/src.1772191627.bak/: layout.rs  lib.rs  metrics.rs  path_utils.rs  render.rs  timer.rs  tray.rs
benches/: render_bench.rs
docs/: architecture.md  pitfalls.md  testing_report.md  verification_checklist.md
src/: build_logger.rs  clean.ps1  config.rs  gui.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_tests.rs  render.rs  tray.rs  version.rs  window.rs
test_scripts/: debug_repro.sh  e2e_verify.sh  security_verify.sh
tests/: asd_tests.rs  hardware_tests.rs  metrics_tests.rs  performance_tests.rs  window_integration.rs
tests/test_data/: nvidia_mock.txt
tests/test_scripts/: e2e_test.sh  hardware_test.sh
