[package]
name = "matrix-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
xcb = { version = "1.2", features = ["randr", "shape", "render", "xinput"] }
cairo-rs = { version = "0.18", features = ["xcb", "png"] }
pangocairo = "0.18"
pango = "0.18"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tray-icon = "0.8"
gtk = "0.16"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
crossbeam-channel = "0.5"
git2 = "0.18"
ollama-rs = "0.1"

# Optional dependencies for features
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
rand = "0.8"

[features]
default = ["weather"]
weather = ["tokio", "reqwest"]

[dev-dependencies]
tempfile = "3.10"
mockito = "1.4"
criterion = "0.5"

[[bench]]
name = "render_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
